fix alignment

--- a/src/views/common/top-artist/style.css
+++ b/src/views/common/top-artist/style.css
@@ -31,6 +31,7 @@
   display: flex;
   justify-content: center;
   flex-direction: column;
+  align-items: center;
 }
 
 .top-card-description {
